Update IP ruleset Use SukkaChinaIP as GEOIP:CN. Add JPNRegionIP.list.

--- a/subconverter/ruleset.ini
+++ b/subconverter/ruleset.ini
@@ -48,7 +48,8 @@ ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=拒绝连接,https://raw.githubusercontent.com/timwa0669/ruleset/master/ruleset/SukkaRejectIP.list
 ruleset=E-Hentai,https://raw.githubusercontent.com/timwa0669/ruleset/master/ruleset/E-HentaiIP.list
 ruleset=香港地域,https://raw.githubusercontent.com/timwa0669/ruleset/master/ruleset/HKGRegionIP.list
-ruleset=全球直连,[]GEOIP,CN
+ruleset=日本地域,https://raw.githubusercontent.com/timwa0669/ruleset/master/ruleset/JPNRegionIP.list
+ruleset=全球直连,https://ruleset.skk.moe/List/ip/china_ip.conf
 ruleset=漏网之鱼,[]FINAL
 
 custom_proxy_group=默认`select`[]全球直连`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]拒绝连接`.*
