--- a/subconverter/ruleset.ini
+++ b/subconverter/ruleset.ini
@@ -40,15 +40,18 @@ ruleset=哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=BBC,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BBC.list
 ruleset=BBC,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BBCiPlayer.list
-ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=香港地域,https://raw.githubusercontent.com/timwa0669/ruleset/master/ruleset/HKGRegionDomain.list
+ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 # IP
 ruleset=拒绝连接,https://raw.githubusercontent.com/timwa0669/ruleset/master/ruleset/SukkaRejectIP.list
 ruleset=E-Hentai,https://raw.githubusercontent.com/timwa0669/ruleset/master/ruleset/E-HentaiIP.list
 ruleset=香港地域,https://raw.githubusercontent.com/timwa0669/ruleset/master/ruleset/HKGRegionIP.list
+ruleset=香港地域,[]GEOIP,HK
 ruleset=日本地域,https://raw.githubusercontent.com/timwa0669/ruleset/master/ruleset/JPNRegionIP.list
+ruleset=日本地域,[]GEOIP,JP
+ruleset=台湾地域,[]GEOIP,TW
+ruleset=新加坡地域,[]GEOIP,SG
 ruleset=全球直连,https://ruleset.skk.moe/List/ip/china_ip.conf
 ruleset=漏网之鱼,[]FINAL
 
