--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-# macOS.gitignore
+# https://github.com/github/gitignore/blob/main/Global/macOS.gitignore
 # General
 **/.DS_Store
 **/.AppleDouble
 **/.LSOverride
 
 # Icon must end with two \r
-**/Icon
+**/Icon
+
 
 # Thumbnails
 **/._*
@@ -25,3 +26,30 @@
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# Modified to ignore .idea directory
+
+# CMake
+cmake-build-*/
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+.idea
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
