Add OpenAI ruleset

--- a/subconverter/ruleset.ini
+++ b/subconverter/ruleset.ini
@@ -30,6 +30,7 @@ ruleset=微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=OpenAI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ruleset=部落冲突,https://raw.githubusercontent.com/timwa0669/ruleset/master/ruleset/ClashOfClans.list
 ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
@@ -64,6 +65,7 @@ custom_proxy_group=漫画人`select`[]默认`[]香港地域`[]日本地域`[]台
 custom_proxy_group=邮件服务`select`[]全球直连`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`.*
 custom_proxy_group=GitHub`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
 custom_proxy_group=E-Hentai`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
+custom_proxy_group=OpenAI`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
 custom_proxy_group=BBC`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
 custom_proxy_group=电报消息`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
 custom_proxy_group=部落冲突`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
