Use fallback in 连接最稳定, IP最优

--- a/subconverter/ruleset_auto_detect.ini
+++ b/subconverter/ruleset_auto_detect.ini
@@ -80,9 +80,9 @@ custom_proxy_group=日本地域`fallback`(日本|川日|东京|大阪|泉日|埼
 custom_proxy_group=新加坡地域`fallback`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`10,2,50
 custom_proxy_group=美国地域`fallback`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|LAX|SJC|SEA|PDX|LGA)`http://cp.cloudflare.com/generate_204`10,2,50
 custom_proxy_group=英国地域`fallback`(UK|Unite Kingdom|GBR|英国|伦敦|London)`http://cp.cloudflare.com/generate_204`10,2,50
-custom_proxy_group=连接最稳定`select`[]全球直连`.*
+custom_proxy_group=连接最稳定`select`[]日本地域`[]台湾地域`[]香港地域`[]全球直连`.*
 custom_proxy_group=PEER最优`select`[]日本地域`[]台湾地域`[]香港地域`[]全球直连`.*
-custom_proxy_group=IP最优`select`[]全球直连`.*
+custom_proxy_group=IP最优`fallback`(DE|NL|UK|德国|荷兰|英国|法兰克福|阿姆斯特丹|伦敦|Deutschland|Frankfurt|Netherlands|Amsterdam|Unite Kingdom|GBR|London)`http://cp.cloudflare.com/generate_204`10,2,50
 custom_proxy_group=拒绝连接`select`[]REJECT`[]DIRECT`.*
 custom_proxy_group=漏网之鱼`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
 
