Change default group selections: subconverter/ruleset_auto_detect.ini

--- a/subconverter/ruleset_auto_detect.ini
+++ b/subconverter/ruleset_auto_detect.ini
@@ -56,19 +56,19 @@ ruleset=新加坡地域,[]GEOIP,SG
 ruleset=全球直连,https://ruleset.skk.moe/List/ip/china_ip.conf
 ruleset=漏网之鱼,[]FINAL
 
-custom_proxy_group=默认`select`[]全球直连`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]拒绝连接`.*
+custom_proxy_group=默认`select`[]香港地域`[]全球直连`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]拒绝连接`.*
 custom_proxy_group=哔哩哔哩`select`[]全球直连`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`.*
-custom_proxy_group=PdfSlide`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
-custom_proxy_group=Minecraft服务`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
-custom_proxy_group=Eyny`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
-custom_proxy_group=漫画人`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
+custom_proxy_group=PdfSlide`select`[]IP最优`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]全球直连`.*
+custom_proxy_group=Minecraft服务`select`[]日本地域`[]默认`[]香港地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
+custom_proxy_group=Eyny`select`[]IP最优`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]全球直连`.*
+custom_proxy_group=漫画人`select`[]美国地域`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
 custom_proxy_group=邮件服务`select`[]全球直连`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`.*
-custom_proxy_group=GitHub`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
-custom_proxy_group=E-Hentai`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
-custom_proxy_group=OpenAI`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
-custom_proxy_group=BBC`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
-custom_proxy_group=电报消息`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
-custom_proxy_group=部落冲突`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
+custom_proxy_group=GitHub`select`[]日本地域`[]默认`[]香港地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
+custom_proxy_group=E-Hentai`select`[]日本地域`[]默认`[]香港地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
+custom_proxy_group=OpenAI`select`[]新加坡地域`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
+custom_proxy_group=BBC`select`[]英国地域`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
+custom_proxy_group=电报消息`select`[]日本地域`[]默认`[]香港地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
+custom_proxy_group=部落冲突`select`[]连接最稳定`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]PEER最优`[]IP最优`[]全球直连`.*
 custom_proxy_group=谷歌服务`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
 custom_proxy_group=微软服务`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
 custom_proxy_group=苹果服务`select`[]默认`[]香港地域`[]日本地域`[]台湾地域`[]新加坡地域`[]美国地域`[]英国地域`[]连接最稳定`[]PEER最优`[]IP最优`[]全球直连`.*
